--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-# to-do-app
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,6 +7,38 @@
     <title>to-do-app</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <h1>Todo APP</h1>
+        <form action="#">
+            <input id="to-do-input" type="text" placeholder="Write anything and press enter." autocomplete="off">
+            <button id="add-button">ADD</button>
+        </form>
+        <ul id="to-do-list">
+            <li class="to-do">
+                <input id="to-do-1" type="checkbox">
+                <label for="to-do-1" class="custom-checkbox">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
+                </label>
+                <label for="to-do-1" class="to-do-text">
+                    Learning javascript and react
+                </label>
+                <button class="delete-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/></svg>
+                </button>
+            </li>
+            <li class="to-do">
+                <input id="to-do-2" type="checkbox">
+                <label for="to-do-2" class="custom-checkbox">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
+                </label>
+                <label for="to-do-2" class="to-do-text">
+                    Learning javascript and react
+                </label>
+                <button class="delete-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/></svg>
+                </button>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
