--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
     <title>to-do-app</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="script/index.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
@@ -14,7 +15,7 @@
             <button id="add-button">ADD</button>
         </form>
         <ul id="to-do-list">
-            <li class="to-do">
+            <!-- <li class="to-do">
                 <input id="to-do-1" type="checkbox">
                 <label for="to-do-1" class="custom-checkbox">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
@@ -25,19 +26,7 @@
                 <button class="delete-button">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/></svg>
                 </button>
-            </li>
-            <li class="to-do">
-                <input id="to-do-2" type="checkbox">
-                <label for="to-do-2" class="custom-checkbox">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z"/></svg>
-                </label>
-                <label for="to-do-2" class="to-do-text">
-                    Learning javascript and react
-                </label>
-                <button class="delete-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M280-120q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520ZM360-280h80v-360h-80v360Zm160 0h80v-360h-80v360ZM280-720v520-520Z"/></svg>
-                </button>
-            </li>
+            </li> -->
         </ul>
     </div>
 </body>
