(chore) change input placeholder text add readme file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <h1>Todo APP</h1>
         <form action="#">
-            <input id="to-do-input" type="text" placeholder="Write anything and press enter." autocomplete="off">
+            <input id="to-do-input" type="text" placeholder="Write anything and press ADD." autocomplete="off">
             <button id="add-button">ADD</button>
         </form>
         <ul id="to-do-list">
